# TinyAlphaZero-coursework

./: .gitignore  .pre-commit-config.yaml  Makefile  READMD.md  pyproject.toml  requirements.txt
.github/workflows/: codecov.yaml
homework1/code/: MCTS.py  Player.py  TicTacToeGame.py  eval.py  train.py
hw1/: Makefile  README.md
hw1/code/: AlphaBeta.py  task-3.py
hw2/: Makefile  README.md  environment.yaml
hw2/code/alphazero/: GoBoard.py  GoGame.py  GoTest.py
hw2/code/alphazero/tests/: GoBoard_test.py  GoGame_test.py
hw2/code/policy_gradient/: plot.py  policy_gradient.py
hw3/: Makefile  README.md  requirements.txt
hw3/alpha_zero/: GoBoard.py  GoGame.py  GoNNet.py  MCTS.py  Player.py  ResNet.py  __init__.py  exp_anylearn.py  main.py  pit.py  pit_multiprocessing.py  plot.py  train_alphazero.py  utils.py
hw3/alpha_zero/tests/: GoGame_test.py  GoNNet_test.py  MCTS_test.py  ResNet_test.py  pit_multiprocessing_test.py  pit_test.py  plot_test.py  train_alphazero_test.py
hw3/code/: GoBoard.py  GoGame.py  GoNNet.py  GoTest.py  MCTS.py  Player.py  exp_anylearn.py  main.py  pit.py  requirements.txt  train_alphazero.py  util.py
hw3/scripts/: watch.sh
