[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["liblaf <i@liblaf.me>"]
description = ""
license = "MIT"
name = "tiny-alpha-zero"
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
matplotlib = "^3.7.1"
numpy = "^1.25.0"
python = "^3.11"
torch = { source = "pytorch", version = "^2.0.1+cpu" }
anylearn = "^0.17.7"
coloredlogs = "^15.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"

[[tool.poetry.source]]
name = "pytorch"
priority = "explicit"
url = "https://download.pytorch.org/whl/cpu"
