[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["liblaf <i@liblaf.me>"]
description = ""
license = "MIT"
name = "tiny-alpha-zero"
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
anylearn = "^0.17.7"
coloredlogs = "^15.0.1"
matplotlib = "^3.5.3"
numpy = "^1.21.1"
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
py-spy = "^0.3.14"

[tool.poetry.group.pytorch.dependencies]
torch = { source = "pytorch", version = "1.12.1+cpu" }

[[tool.poetry.source]]
name = "pytorch"
priority = "explicit"
url = "https://download.pytorch.org/whl/cpu"
