[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["liblaf <i@liblaf.me>"]
description = ""
license = "MIT"
name = "tiny-alpha-zero"
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
anylearn = "^0.17.7"
coloredlogs = "^15.0.1"
matplotlib = "^3.5.3"
numpy = "^1.21.1"
python = "^3.7"

[tool.poetry.group.dev.dependencies]
py-spy = "^0.3.14"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.pytorch.dependencies]
torch = "^1.13.1"

[[tool.poetry.source]]
name = "cpu"
priority = "explicit"
url = "https://download.pytorch.org/whl/cpu"

[[tool.poetry.source]]
name = "cu117"
priority = "explicit"
url = "https://download.pytorch.org/whl/cu117"
